tests/paczka1/fuzzy1/27534681.err
Error in line 14: A687 S724 28,9
Error in line 11: YyWoE9OCn A11 65,5
Error in line 16: YyWoE9OCn S724 87,9
